--- a/INDEX111.html
+++ b/INDEX111.html
@@ -100,47 +100,45 @@
 
 
                 <div class='blok_main_1'>
-                    <div id="parent">
+
 
                         <button class="buttonStartMenu" type="button">Каталог товару</button>
                         <nav class='left-group-menu' id='id-left-group-menu'>
                             <ul class="menu_categories">
-                                <li class="menu_categories__item"><a href="#">Вентилятори та елементи вентиляційних систем</a>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="#">Вентилятори та елементи вентиляційних систем</a>
                                     <ul class="subCategory">
-                                        <li class="menu_categories__item"><a href="#">Побутові вентилятори</a></li>
-                                        <li class="menu_categories__item"><a href="#">Промислові вентилятори</a></li>
-                                        <li class="menu_categories__item"><a href="#">Вентиляційні решітки</a></li>
-                                        <li class="menu_categories__item"><a href="#">Повітроводи, розети, муфти</a>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="#">Побутові вентилятори</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="#">Промислові вентилятори</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="#">Вентиляційні решітки</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="#">Повітроводи, розети, муфти</a>
                                             <ul class="subCategory">
-                                                <li><a href="?k=air_ducts">Повітроводи</a></li>
-                                                <li><a href="?k=coupling">Муфти</a></li>
-                                                <li><a href="?k=rosettes">Розети</a></li>
+                                                <li class="menu_categories__item"><a class="menu_categories__link" href="#">Повітроводи</a></li>
+                                                <li class="menu_categories__item"><a class="menu_categories__link" href="#">Муфти</a></li>
+                                                <li class="menu_categories__item"><a class="menu_categories__link" href="#">Розети</a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu_categories__item"><a href="?k=air_heating_units">Повітряно-опалювальні агрегати</a></li>
-                                        <li class="menu_categories__item"><a href="?k=deflectors">Дефлектори</a></li>
-                                        <li class="menu_categories__item"><a href="?k=accessories_vent">Аксесуари</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="?k=air_heating_units">Повітряно-опалювальні агрегати</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="?k=deflectors">Дефлектори</a></li>
+                                        <li class="menu_categories__item"><a class="menu_categories__link" href="?k=accessories_vent">Аксесуари</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu_categories__item"><a href="?k=lamps">Лампи</a></li>
-                                <li class="menu_categories__item"><a href="?k=lighting_projectors">Світильники, прожектори</a></li>
-                                <li class="menu_categories__item"><a href="?k=switches_sockets">Вимикачі, розетки, подовжувачі, вилки</a></li>
-                                <li class="menu_categories__item"><a href="?k=cable_wire">Кабель, провід, СІП</a></li>
-                                <li class="menu_categories__item"><a href="?k=low_voltage">Низьковольтне обладнання</a></li>
-                                <li class="menu_categories__item"><a href="?k=elements_installation">Елементи для монтажу</a></li>
-                                <li class="menu_categories__item"><a href="?k=batteries_and_chargers">Батарейки та зарядні пристрої</a></li>
-                                <li class="menu_categories__item"><a href="?k=svod">Фільтри для води та побутова хімія СВОД</a></li>
-                                <li class="menu_categories__item"><a href="?k=instrument">Обжимний, різальний інструмент</a></li>
-                                <li class="menu_categories__item"><a href="?k=magnetic_holders">Магнітні тримачі, захвати</a></li>
-                                <li class="menu_categories__item"><a href="?k=metal_structures">Металоконструкції</a></li>
-                                <li class="menu_categories__item"><a href="?k=ozonizers">Озонатори</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=lamps">Лампи</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=lighting_projectors">Світильники, прожектори</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=switches_sockets">Вимикачі, розетки, подовжувачі, вилки</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=cable_wire">Кабель, провід, СІП</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=low_voltage">Низьковольтне обладнання</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=elements_installation">Елементи для монтажу</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=batteries_and_chargers">Батарейки та зарядні пристрої</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=svod">Фільтри для води та побутова хімія СВОД</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=instrument">Обжимний, різальний інструмент</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=magnetic_holders">Магнітні тримачі, захвати</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=metal_structures">Металоконструкції</a></li>
+                                <li class="menu_categories__item"><a class="menu_categories__link" href="?k=ozonizers">Озонатори</a></li>
                             </ul>
                         </nav>
 
-                        <div class="left-group-menu2"></div>
-                        <div id="vlast-zone" class="left-group-vlast"></div>
 
-                    </div>
+
                 </div>
 
             </div>
